Attempts to fix sponsorship button overlap on mobile.

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -380,7 +380,7 @@ button:focus {outline:0;}
         font-size:13px;
     }
     .main-btn {
-        width: 98px;
+        width: 185px;
         height: 50px;
         line-height: 0px;
         border-radius: 3px;
